--- a/Source/Plugins/NodeGraphAssistant/NodeGraphAssistant.uplugin
+++ b/Source/Plugins/NodeGraphAssistant/NodeGraphAssistant.uplugin
@@ -1,19 +1,18 @@
 {
 	"FileVersion": 3,
-	"Version": 1.3,
-	"VersionName": "1.3",
+	"Version": 1.5,
+	"VersionName": "1.5",
 	"FriendlyName": "Node Graph Assistant",
 	"Description": "Introduce new editor features that enable faster node graph creation.",
 	"Category": "Editor",
 	"CreatedBy": "yangxiangyun",
-	"CreatedByURL": "https://yangxiangyun.wixsite.com/mysite",
-	"DocsURL": "https://github.com/pdlogingithub/UE4-Node-Graph-Assistant/blob/master/MarketPlace/readme.md",
+	"CreatedByURL": "https://github.com/pdlogingithub",
+	"DocsURL": "https://github.com/pdlogingithub/UE4-Node-Graph-Assistant/blob/master/README.md",
 	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/d9baaaeadeaf41dcb52b3f6e134e9514",
 	"SupportURL": "https://forums.unrealengine.com/unreal-engine/marketplace/1435240-node-graph-assistant",
-  "EngineVersion": [ "4.16.0", "4.17.0", "4.18.0", "4.19.0" ],
+	"EngineVersion": [ "4.16.0", "4.17.0", "4.18.0", "4.19.0" ],
 	"EnabledByDefault": true,
 	"CanContainContent": false,
-	"IsBetaVersion": false,
 	"Installed": true,
 	"Modules": 
 	[
